--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1276,6 +1276,7 @@ font-weight: 700;
     display: inline-block;
 	padding: 15px;
 	width: 100px;
+	z-index: 999;
 }
 
 /* 下拉内容 (默认隐藏) */
@@ -1289,6 +1290,7 @@ font-weight: 700;
 	border-color: black;
 	border-style: solid;
 	border-width: thin;
+	z-index: 999;
 }
 
 /* 下拉菜单的链接 */
@@ -1387,6 +1389,7 @@ font-weight: 700;
 
 .single-info h2,h3,h4 {
 	padding-top: 20px;
+	margin-left: -1em;
 }
 
 .single-button {
@@ -1428,7 +1431,7 @@ font-weight: 700;
 .single-recommend h1{
 	margin-left: 40px;
 }
-.single-rrecommend-content {
+.single-recommend-content {
 	margin: 30px;
 	width: 120%;
 	background: #f7f7f7;
@@ -1482,7 +1485,7 @@ font-weight: 700;
 .movies {
 	position: relative;
 	width: 100%;
-	height: 1000px;
+	height: 1700px;
 	clear: both;
 }
 
@@ -1660,7 +1663,7 @@ font-weight: 700;
 	clear: both;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: center;
+	justify-content: left;
 	margin: auto;
 	margin-bottom: 50px;
 }
@@ -1699,7 +1702,7 @@ font-weight: 700;
 .image-details {
   text-align: center;
   color: white;
-  font-size: 20px;
+  font-size: 16px;font-family: "Source Sans Pro", Arial, sans-serif;
   z-index: 4;
   position: absolute;
   top: 100%;
@@ -1710,4 +1713,58 @@ font-weight: 700;
 .movie-list-single:hover .image-details {
   top: 40%;
   opacity: 1;
+}
+
+/*
+page
+ */
+
+/*设置div样式的整体布局*/
+.page-icon{
+	width: 100%;
+	margin:20px 0 0 0;/*设置距离顶部20像素*/
+	font-size:0;/*修复行内元素之间空隙间隔*/
+	text-align:center;/*设置内容居中显示*/
+}
+
+/*设置共有的的样式布局，主要是进行代码优化，提高运行效率*/
+.page-icon a,.page-disabled,.page-next{
+	border:1px solid #ccc;
+	border-radius:3px;
+	padding:4px 10px 5px;
+	font-size:14PX;/*修复行内元素之间空隙间隔*/
+	margin-right:10px;
+}
+
+/*对 a 标签进行样式布局 */
+.page-icon a{
+	text-decoration:none;/*取消链接的下划线*/
+	color:#005aa0;
+}
+
+.page-current{
+	color:#ff6600;
+	padding:4px 10px 5px;
+	font-size:14PX;/*修复行内元素之间空隙间隔*/
+}
+
+.page-disabled{
+	color:#ccc;
+}
+
+.page-next i,.page-disabled i{
+	cursor:pointer;/*设置鼠标经过时的显示状态，这里设置的是显示状态为小手状态*/
+	display:inline-block;/*设置显示的方式为行内块元素*/
+	width:5px;
+	height:9px;
+	background-image:url(http://img.mukewang.com/547fdbc60001bab900880700.gif);/*获取图标的背景链接*/
+}
+.page-disabled i{
+	background-position:-80px -608px;
+	margin-right:3px;
+}
+
+.page-next i{
+	background-position:-62px -608px;
+	margin-left:3px;
 }
