--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -22,7 +22,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="menu">
 				<ul>
 					<li><a href="{% url 'index' %}"><div class="hm"><i class="home1"></i><i class="home2"></i></div></a></li>
-					<li><a href="topmovies.html"><div class="video"><i class="videos"></i><i class="videos1"></i></div></a></li>
+					<li><a href="/moviehub/topmovies/{{index}}"><div class="video"><i class="videos"></i><i class="videos1"></i></div></a></li>
 					<li><a href="reviews.html"><div class="cat"><i class="watching"></i><i class="watching1"></i></div></a></li>
 					<li><a class="active" href="404.html"><div class="bk"><i class="booking"></i><i class="booking1"></i></div></a></li>
 					<li><a href="contact.html"><div class="cnt"><i class="contact"></i><i class="contact1"></i></div></a></li>
@@ -86,7 +86,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="error-404 text-center">
 				<h2>Lost your way?</h2>
 				<p>Sorry, we can't find that page. You'll find lots to explore on the home page.</p>
-				<a class="b-home" href="index.html">Moviehub Home</a>
+				<a class="b-home" href="{% url 'index' %}">Moviehub Home</a>
 			</div>	
 	<div class="footer">
 		<h6>Disclaimer : </h6>
