--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -41,7 +41,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                           <button class="dropbtn">Movies</button>
                           <div class="dropdown-content">
                             <a href="#">Popular</a>
-                            <a href="#">Top Rated</a>
+                            <a href="/moviehub/topmoovies">Top Rated</a>
                             <a href="#">Now Playing</a>
                           </div>
                         </div>
