--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -40,7 +40,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   <button class="dropbtn">Movies</button>
                   <div class="dropdown-content">
                     <a href="#">Popular</a>
-                    <a href="#">Top Rated</a>
+                    <a href="/moviehub/topmovies">Top Rated</a>
                     <a href="#">Now Playing</a>
                   </div>
                 </div>
@@ -90,7 +90,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <p>Release &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: &nbsp;&nbsp; 17 March 2017</p>
                         <p>Run time &nbsp;&nbsp;&nbsp;&nbsp;: &nbsp;&nbsp;  2h 9min</p>
                         <p class="special">A selfish Prince is cursed to become a monster for the rest of his life, unless he learns to fall in love with a beautiful young woman he keeps prisoner.</p>
-                        <a class="detail" href="#"><img src="../../static/images/icons/inbox-white.png" style="max-height: 50px; margin-right: 10px"></img>VIEW DETAILS</a>
+                        <a class="detail" href="/moviehub/movie/168366"><img src="../../static/images/icons/inbox-white.png" style="max-height: 50px; margin-right: 10px"></img>VIEW DETAILS</a>
                     </div>
 
         <div class="clearfix"></div>
