--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1403,10 +1403,10 @@ font-weight: 700;
 
 /*评论区 */
 .single-review {
-	display:inline-block;
 	margin-top: 4em;
 	margin-bottom: 2em;
 	width: 60%;
+	float: left;
 }
 .single-review h1 {
 	margin-left: 20px;
@@ -1420,26 +1420,44 @@ font-weight: 700;
     -webkit-transform: translate3d(0, 0px, -2px);
     transform: translate3d(0, 1px, -2px);
 	width: 100%;
-	height: 400px;
+	height: 500px;
 }
 .single-recommend{
+	width: 30%;
 	margin-top: 4em;
 	margin-bottom: 2em;
-	margin-left: 2em;
-	display:inline-block;
+	padding-right: 2em;
+	float: right;
 }
 .single-recommend h1{
 	margin-left: 40px;
 }
 .single-recommend-content {
 	margin: 30px;
-	width: 120%;
+	width: 100%;
 	background: #f7f7f7;
     -webkit-box-shadow: 0 0 30px rgba(0,0,0,0.1);
     box-shadow: 0 0 30px rgba(0,0,0,0.15);
     -webkit-transform: translate3d(0, 0px, -2px);
     transform: translate3d(0, 1px, -2px);
 	height: 500px;
+	overflow-y: scroll;
+}
+
+.single-recommend-movie {
+	display: inline-block;
+}
+
+.single-recommend-movie h4 {
+	width: 50%;
+	float: right;
+	margin-top: 30px;
+}
+
+.single-recommend-movie img{
+	width: 50%;
+	padding: 20px;
+	float: left;
 }
 
 .content h1,h2,h3,h4,h5 {
