--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -38,13 +38,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         </div>
 
                         <div class="dropdown">
-                          <button class="dropbtn">Movies</button>
-                          <div class="dropdown-content">
-                            <a href="#">Popular</a>
-                            <a href="/moviehub/topmoovies">Top Rated</a>
-                            <a href="#">Now Playing</a>
-                          </div>
-                        </div>
+                  <button class="dropbtn">Movies</button>
+                  <div class="dropdown-content">
+                    <a href="#">Popular</a>
+                    <a href="/moviehub/topmovies">Top Rated</a>
+                    <a href="#">Now Playing</a>
+                  </div>
+                </div>
 
                         <div class="dropdown">
                           <button class="dropbtn">People</button>
