--- a/app/templates/single.html
+++ b/app/templates/single.html
@@ -40,7 +40,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   <button class="dropbtn">Movies</button>
                   <div class="dropdown-content">
                     <a href="#">Popular</a>
-                    <a href="/moviehub/topmoovies">Top Rated</a>
+                    <a href="/moviehub/topmovies">Top Rated</a>
                     <a href="#">Now Playing</a>
                   </div>
                 </div>
@@ -118,26 +118,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <h1>Recommendations</h1>
                     <div class="single-recommend-content">
                          <div style="border: 1px  #000000; width: 90%; margin: 0 auto;">
+                             {% for movie in recommended_movies %}
                             <div class="single-recommend-movie">
-                                <img src="../../static/images/m1.jpg" >
-                                <h4>Toy Story</h4>
+                                <img src="{{'https://www.themoviedb.org/t/p/w1280/'}}{{movie.poster_url}}" >
+                                <a href="/moviehub/movie/{{movie.movie_id}}"><h4>{{ movie.movie_title }}</h4></a>
                             </div>
-                            <div class="single-recommend-movie">
-                                <img src="../../static/images/m1.jpg" >
-                                <h4>Toy Story</h4>
-                            </div>
-                             <div class="single-recommend-movie">
-                                <img src="../../static/images/m1.jpg" >
-                                <h4>Toy Story</h4>
-                            </div>
-                             <div class="single-recommend-movie">
-                                <img src="../../static/images/m1.jpg" >
-                                <h4>Toy Story</h4>
-                            </div>
-                             <div class="single-recommend-movie">
-                                <img src="../../static/images/m1.jpg" >
-                                <h4>Toy Story</h4>
-                            </div>
+                             {% endfor %}
                         </div>
 
                     </div>
