--- a/app/templates/topmovies.html
+++ b/app/templates/topmovies.html
@@ -91,15 +91,49 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 {% csrf_token %}
                 <dropdown class="movies">
                   <input id="toggle1" type="checkbox" checked>
-                  <label for="toggle1" class="animate">Sort<i class="fa fa-list float-right"></i></label>
+                  <label for="toggle1" class="animate">Options<i class="fa fa-list float-right"></i></label>
                   <ul class="animate">
                     <li class="animate">
                         <p style="font-size: 14px; font-weight: lighter">Sort Results By</p>
                         <select name="sort" style="margin-top: 10px; width: 100%; font-size: 13px;padding:5px;">
+                            {% if selected == 1 %}
+                            <option value =1 selected>Rating Descending</option>
+                            {% else %}
                             <option value =1>Rating Descending</option>
+                            {% endif %}
+                            {% if selected == 2 %}
+                            <option value =2 selected>Rating Ascending</option>
+                            {% else %}
                             <option value =2>Rating Ascending</option>
+                            {% endif %}
                             <option value =3>Popularity Descending</option>
                             <option value =4>Popularity Ascending</option>
+                        </select>
+                    </li>
+                  <li class="animate">
+                        <p style="font-size: 14px; font-weight: lighter">Genres</p>
+                        <select name="genres" style="margin-top: 10px; width: 100%; font-size: 13px;padding:5px;">
+                            <option value =1>All</option>
+                            <option value ='Adventure'>Adventure</option>
+                            <option value ='Animation'>Animation</option>
+                            <option value ='Children'>Children</option>
+                            <option value ='Comedy'>Comedy</option>
+                            <option value ='Fantasy'>Fantasy</option>
+                            <option value ='Romance'>Romance</option>
+                            <option value ='Drama'>Drama</option>
+                            <option value ='Action'>Action</option>
+                            <option value ='Crime'>Crime</option>
+                            <option value ='Thriller'>Thriller</option>
+                            <option value ='Horror'>Horror</option>
+                            <option value ='Mystery'>Mystery</option>
+                            <option value ='Sci-Fi'>Sci-Fi</option>
+                            <option value ='War'>War</option>
+                            <option value ='Musical'>Musical</option>
+                            <option value ='Documentary'>Documentary</option>
+                            <option value ='IMAX'>IMAX</option>
+                            <option value ='Western'>Western</option>
+                            <option value ='Film-Noir'>Film-Noir</option>
+                            <option value ='(no genres listed)'>(no genres listed)</option>
                         </select>
                     </li>
                   </ul>
