--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,7 +22,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="menu">
 				<ul>
 					<li><a class="active" href="{% url 'index' %}"><i class="home"></i></a></li>
-					<li><a href="/moviehub/topmovies/{{index}}"><div class="video"><i class="videos"></i><i class="videos1"></i></div></a></li>
+					<li><a href="/moviehub/topmovies/?&index={{index}}"><div class="video"><i class="videos"></i><i class="videos1"></i></div></a></li>
 					<li><a href="reviews.html"><div class="cat"><i class="watching"></i><i class="watching1"></i></div></a></li>
 					<li><a href="{% url '404' %}"><div class="bk"><i class="booking"></i><i class="booking1"></i></div></a></li>
 					<li><a href="{% url 'contact' %}"><div class="cnt"><i class="contact"></i><i class="contact1"></i></div></a></li>
@@ -39,7 +39,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="dropdown">
                   <button class="dropbtn">Movies</button>
                   <div class="dropdown-content">
-                    <a href="#">Popular</a>
+                    <a href="/moviehub/topmovies/?sort=3">Popular</a>
                     <a href="/moviehub/topmovies">Top Rated</a>
                     <a href="#">Now Playing</a>
                   </div>
