--- a/app/templates/topmovies.html
+++ b/app/templates/topmovies.html
@@ -22,7 +22,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="menu">
 				<ul>
 					<li><a href="{% url 'index' %}"><div class="hm"><i class="home1"></i><i class="home2"></i></div></a></li>
-					<li><a class="active" href="/moviehub/topmovies/{{index}}"><div class="video"><i class="videos"></i><i class="videos1"></i></div></a></li>
+					<li><a class="active" href="/moviehub/topmovies/?&index={{index}}"><div class="video"><i class="videos"></i><i class="videos1"></i></div></a></li>
 					<li><a href="reviews.html"><div class="cat"><i class="watching"></i><i class="watching1"></i></div></a></li>
 					<li><a href="{% url '404' %}"><div class="bk"><i class="booking"></i><i class="booking1"></i></div></a></li>
 					<li><a href="{% url 'contact' %}"><div class="cnt"><i class="contact"></i><i class="contact1"></i></div></a></li>
@@ -39,7 +39,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="dropdown">
                   <button class="dropbtn">Movies</button>
                   <div class="dropdown-content">
-                    <a href="#">Popular</a>
+                    <a href="/moviehub/topmovies/?sort=3">Popular</a>
                     <a href="/moviehub/topmovies">Top Rated</a>
                     <a href="#">Now Playing</a>
                   </div>
@@ -87,8 +87,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <h2>Top Rated Movies</h2>
 
             <div class="movies-sort">
-                <form action="{% url 'sort' %}" method="post">
-                {% csrf_token %}
+                <form action="/moviehub/topmovies/?index=1" method="get">
                 <dropdown class="movies">
                   <input id="toggle1" type="checkbox" checked>
                   <label for="toggle1" class="animate">Options<i class="fa fa-list float-right"></i></label>
@@ -96,43 +95,131 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <li class="animate">
                         <p style="font-size: 14px; font-weight: lighter">Sort Results By</p>
                         <select name="sort" style="margin-top: 10px; width: 100%; font-size: 13px;padding:5px;">
-                            {% if selected == 1 %}
+                            {% if sort_selected == '1' %}
                             <option value =1 selected>Rating Descending</option>
                             {% else %}
                             <option value =1>Rating Descending</option>
                             {% endif %}
-                            {% if selected == 2 %}
+                            {% if sort_selected == '2' %}
                             <option value =2 selected>Rating Ascending</option>
                             {% else %}
                             <option value =2>Rating Ascending</option>
                             {% endif %}
+                            {% if sort_selected == '3' %}
+                            <option value =3 selected>Popularity Descending</option>
+                            {% else %}
                             <option value =3>Popularity Descending</option>
+                            {% endif %}
+                            {% if sort_selected == '4' %}
+                            <option value =4 selected>Popularity Ascending</option>
+                            {% else %}
                             <option value =4>Popularity Ascending</option>
+                            {% endif %}
                         </select>
                     </li>
                   <li class="animate">
                         <p style="font-size: 14px; font-weight: lighter">Genres</p>
                         <select name="genres" style="margin-top: 10px; width: 100%; font-size: 13px;padding:5px;">
-                            <option value =1>All</option>
-                            <option value ='Adventure'>Adventure</option>
-                            <option value ='Animation'>Animation</option>
-                            <option value ='Children'>Children</option>
-                            <option value ='Comedy'>Comedy</option>
-                            <option value ='Fantasy'>Fantasy</option>
-                            <option value ='Romance'>Romance</option>
-                            <option value ='Drama'>Drama</option>
-                            <option value ='Action'>Action</option>
-                            <option value ='Crime'>Crime</option>
-                            <option value ='Thriller'>Thriller</option>
-                            <option value ='Horror'>Horror</option>
-                            <option value ='Mystery'>Mystery</option>
-                            <option value ='Sci-Fi'>Sci-Fi</option>
-                            <option value ='War'>War</option>
-                            <option value ='Musical'>Musical</option>
-                            <option value ='Documentary'>Documentary</option>
-                            <option value ='IMAX'>IMAX</option>
-                            <option value ='Western'>Western</option>
-                            <option value ='Film-Noir'>Film-Noir</option>
+                            {% if genres_selected == '1' %}
+                                <option value =1 selected>All</option>
+                            {% else %}
+                                <option value =1>All</option>
+                            {% endif %}
+                            {% if genres_selected == 'Adventure' %}
+                                <option value ='Adventure' selected>Adventure</option>
+                            {% else %}
+                                <option value ='Adventure'>Adventure</option>
+                            {% endif %}
+                            {% if genres_selected == 'Animation' %}
+                                <option value ='Animation' selected>Animation</option>
+                            {% else %}
+                                <option value ='Animation'>Animation</option>
+                            {% endif %}
+                            {% if genres_selected == 'Children' %}
+                                <option value ='Children' selected>Children</option>
+                            {% else %}
+                                <option value ='Children'>Children</option>
+                            {% endif %}
+                            {% if genres_selected == 'Comedy' %}
+                                <option value ='Comedy' selected>Comedy</option>
+                            {% else %}
+                                <option value ='Comedy'>Comedy</option>
+                            {% endif %}
+                            {% if genres_selected == 'Fantasy' %}
+                                <option value ='Fantasy' selected>Fantasy</option>
+                            {% else %}
+                                <option value ='Fantasy'>Fantasy</option>
+                            {% endif %}
+                            {% if genres_selected == 'Romance' %}
+                                <option value ='Romance' selected>Romance</option>
+                            {% else %}
+                                <option value ='Romance'>Romance</option>
+                            {% endif %}
+                            {% if genres_selected == 'Drama' %}
+                                <option value ='Drama' selected>Drama</option>
+                            {% else %}
+                                <option value ='Drama'>Drama</option>
+                            {% endif %}
+                            {% if genres_selected == 'Action' %}
+                                <option value ='Action' selected>Action</option>
+                            {% else %}
+                                <option value ='Action'>Action</option>
+                            {% endif %}
+                            {% if genres_selected == 'Crime' %}
+                                <option value ='Crime' selected>Crime</option>
+                            {% else %}
+                                <option value ='Crime'>Crime</option>
+                            {% endif %}
+                            {% if genres_selected == 'Thriller' %}
+                                <option value ='Thriller' selected>Thriller</option>
+                            {% else %}
+                                <option value ='Thriller'>Thriller</option>
+                            {% endif %}
+                            {% if genres_selected == 'Horror' %}
+                                <option value ='Horror' selected>Horror</option>
+                            {% else %}
+                                <option value ='Horror'>Horror</option>
+                            {% endif %}
+                            {% if genres_selected == 'Mystery' %}
+                                <option value ='Mystery' selected>Mystery</option>
+                            {% else %}
+                                <option value ='Mystery'>Mystery</option>
+                            {% endif %}
+                            {% if genres_selected == 'Sci-Fi' %}
+                                <option value ='Sci-Fi' selected>Sci-Fi</option>
+                            {% else %}
+                                <option value ='Sci-Fi'>Sci-Fi</option>
+                            {% endif %}
+                            {% if genres_selected == 'War' %}
+                                <option value ='War' selected>War</option>
+                            {% else %}
+                                <option value ='War'>War</option>
+                            {% endif %}
+                            {% if genres_selected == 'Musical' %}
+                                <option value ='Musical' selected>Musical</option>
+                            {% else %}
+                                <option value ='Musical'>Musical</option>
+                            {% endif %}
+                            {% if genres_selected == 'Documentary' %}
+                                <option value ='Documentary' selected>Documentary</option>
+                            {% else %}
+                                <option value ='Documentary'>Documentary</option>
+                            {% endif %}
+                            {% if genres_selected == 'IMAX' %}
+                                <option value ='IMAX' selected>IMAX</option>
+                            {% else %}
+                                <option value ='IMAX'>IMAX</option>
+                            {% endif %}
+                            {% if genres_selected == 'Western' %}
+                                <option value ='Western' selected>Western</option>
+                            {% else %}
+                                <option value ='Western'>Western</option>
+                            {% endif %}
+                            {% if genres_selected == 'Film-Noir' %}
+                                <option value ='Film-Noir' selected>Film-Noir</option>
+                            {% else %}
+                                <option value ='Film-Noir'>Film-Noir</option>
+                            {% endif %}
                         </select>
                     </li>
                   </ul>
@@ -150,7 +237,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <div class="overlay"></div>
                               <img src = "{{'https://www.themoviedb.org/t/p/w1280/'}}{{each.poster_url}}" alt="">
                               <div class="image-details">
-                                  <a href="/moviehub/movie/{{ each.movie_id }}" style="color: white"><p>{{ each.movie_title }}</p></a>
+                                  <a href="/moviehub/movie/{{ each.movie_id }}" style="color: white"><p style="font-weight: bold">{{ each.movie_title }}</p></a>
                               </div>
                         </div>
                     {% endfor %}
@@ -160,7 +247,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     {% if index == page.number %}
                     <span class="page-current">{{ index }}</span>
                     {% else %}
-                     <a href="/moviehub/topmovies/{{index}}">{{ index }}</a>
+                     <a href="/moviehub/topmovies/?index={{ index }}&sort={{ sort_selected }}&genres={{ genres_selected }}">{{ index }}</a>
                     {% endif %}
                 {% endfor %}
             </div>
