--- a/app/templates/topmovies.html
+++ b/app/templates/topmovies.html
@@ -7,6 +7,7 @@
 <link href="../../static/css/style.css" rel="stylesheet" type="text/css" media="all" />
 <!-- Custom Theme files -->
 <script src="../../static/js/jquery.min.js"></script>
+<script src="../../static/js/jquery.classyloader.min.js"></script>
 <!-- Custom Theme files -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -65,11 +66,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 				{%  if request.session.is_login %}
                 <div class="login">
-					<a href="#">{{request.session.username}}</a><span>|</span><a href="{% url 'logout' %}" style="color: orange">Logout</a>
+					<a href="#">{{request.session.username}}</a><span>&nbsp;&nbsp;|&nbsp;&nbsp;</span><a href="{% url 'logout' %}" style="color: orange">Logout</a>
 				</div>
                 {% else %}
 				<div class="login">
-					<a href="{% url 'login' %}">Log in</a><span>|</span><a href="{% url 'register' %}">Sign up</a>
+					<a href="{% url 'login' %}">Log in</a><span>&nbsp;&nbsp;|&nbsp;&nbsp;</span><a href="{% url 'register' %}">Sign up</a>
 				</div>
                 {% endif %}
 				<div class="search">
@@ -239,7 +240,29 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                               <div class="image-details">
                                   <a href="/moviehub/movie/{{ each.movie_id }}" style="color: white"><p style="font-weight: bold">{{ each.movie_title }}</p></a>
                               </div>
+                            <div class="rating-overlay"><canvas class="loader{{ each.movie_id }}" style="margin-left: -35%; margin-top: 75%;"></canvas></div>
                         </div>
+                            <script>
+                                $(document).ready(function() {
+                                    $('.loader{{each.movie_id}}').ClassyLoader({
+                                        speed: 20,
+                                        diameter: 25,
+                                        fontSize: '12px',
+                                        fontFamily: 'Open Sans',
+                                    {% if each.rating <= 2 %}
+                                        lineColor: 'rgba(201,57,97,1)',
+                                    {% elif each.rating > 2 and each.rating <= 3.5%}
+                                        lineColor: 'rgba(212,212,83,1)',
+                                    {% else %}
+                                        lineColor: 'rgba(96,197,126,1)',
+                                    {% endif %}
+                                        fontColor: 'rgba(255,255,255,0.8)',
+                                        percentage: ({{ each.rating }} / 5) * 100,
+                                        remainingLineColor: 'rgba(255,255,255,0.3)',
+                                        lineWidth: 10,
+                                    });
+                                });
+                            </script>
                     {% endfor %}
             <hr>
             <div class="page-icon">
@@ -251,6 +274,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     {% endif %}
                 {% endfor %}
             </div>
+
 
         </div>
 
