--- a/static/css/style.css
+++ b/static/css/style.css
@@ -851,7 +851,7 @@ a.b-home:hover{
 /*--contact--*/
 .main-contact{
 	padding:4em 5em;
-	  border-top: 1px solid #000;
+	border-top: 1px solid #000;
 }
 .main-contact p{
 	color: #000;
@@ -1692,13 +1692,22 @@ font-weight: 700;
 }
 
 .overlay {
-  background: rgba(0, 0, 0, 0.7);
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  z-index: 3;
-  opacity: 0;
-  transition: all ease-in-out 0.5s;
+	background: rgba(0, 0, 0, 0.7);
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	z-index: 3;
+	opacity: 0;
+	transition: all ease-in-out 0.5s;
+}
+
+.rating-overlay {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	z-index: 4;
+	opacity: 0;
+	transition: all ease-in-out 0.5s;
 }
 
 .movie-list-single:hover .overlay {
@@ -1732,6 +1741,10 @@ font-weight: 700;
 .movie-list-single:hover .image-details {
   top: 40%;
   opacity: 1;
+}
+
+.movie-list-single:hover .rating-overlay {
+	opacity: 1;
 }
 
 /*
@@ -1787,3 +1800,58 @@ page
 	background-position:-62px -608px;
 	margin-left:3px;
 }
+
+/*--profile--*/
+.main-profile{
+	border-top: 1px solid #000;
+	display: inline;
+}
+.main-profile h2 {
+	color:#383838;
+	font-size:28px;
+	font-weight:700;
+	margin:10px 20px;
+	padding-left: 0;
+}
+.profile-header {
+	width: 100%;
+	height: 300px;
+	background: url(../images/profile-header-bg.jpeg) no-repeat 0;
+}
+
+.profile-header h3 {
+	font-size: 28px;
+	margin-left: 2em;
+}
+
+.profile-header-info {
+	display: inline-block;
+	width: 90%;
+	height: auto;
+	padding: 2em;
+}
+
+.profile-header-image {
+	width: 20%;
+	height: auto;
+	float: left;
+}
+
+.profile-header-image img {
+	width: 60%;
+	margin-left: 2em;
+}
+
+.profile-header-average-score {
+	width: 20%;
+	height: auto;
+	float: left;
+}
+
+.profile-header-stats {
+	width: 20%;
+	height: auto;
+	float: left;
+	margin-left: 2em;
+}
+
