--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1320,19 +1320,19 @@ font-weight: 700;
 	position: relative;
 	background-size: cover;
 	box-sizing: border-box;
-	z-index: -2;
+	z-index: 0;
 }
 
 .single-bg:after {
 	content: "";
-	width: 100%;
-	height: 100%;
+	width: 80%;
+	height: 400px;
 	position: absolute;
-	left: 0;
-	top: 0;
+	left: 15%;
+	top: 20%;
 	/* 从父元素继承 background 属性的设置 */
-	background: whitesmoke;
-	filter: blur(200px);
+	background: white;
+	filter: blur(150px);
 	z-index: -1;
 }
 
@@ -1353,7 +1353,7 @@ font-weight: 700;
 	left: 18%;
 	top: 52%;
 	transform: translate(-50%, -50%);
-	width: 25%;
+	width: 320px;
 	height: 530px;
 	float: left;
 	z-index: 0;
@@ -1361,7 +1361,7 @@ font-weight: 700;
 
 .single-poster img {
 	width: 100%;
-	height: auto;
+	height: 500px;
 }
 
 .single-info {
@@ -1390,6 +1390,7 @@ font-weight: 700;
 .single-info h2,h3,h4 {
 	padding-top: 20px;
 	margin-left: -1em;
+	font-weight: bold;
 }
 
 .single-button {
@@ -1399,6 +1400,10 @@ font-weight: 700;
 }
 .single-button input{
 	margin-left: 10px;
+}
+
+.single-button a, a:visited, a:active, a:hover {
+	text-decoration: none;
 }
 
 /*评论区 */
@@ -1731,7 +1736,7 @@ font-weight: 700;
 	text-align: center;
 	color: white;
 	font-size: 16px;font-family: "Source Sans Pro", Arial, sans-serif;
-	z-index: 4;
+	z-index: 5;
 	position: absolute;
 	top: 100%;
 	opacity: 0;
@@ -1855,3 +1860,23 @@ page
 	margin-left: 2em;
 }
 
+
+.profile-favorite-content {
+	width:100%;
+	height: 300px;
+	clear: both;
+	display: flex;
+	flex-wrap: nowrap;
+	justify-content: left;
+	margin: auto auto 50px;
+	overflow-x: scroll;
+}
+
+.favorite-list-single {
+	width: 20%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 20px;
+	position: relative;
+}
