--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Contact</title>
+<link rel="icon" href="../../static/images/logo-icon.png" type="image/x-icon"/>
 <link href="../../static/css/bootstrap.css" rel='stylesheet' type='text/css' />
 <!-- Custom Theme files -->
 <link href="../../static/css/style.css" rel="stylesheet" type="text/css" media="all" />
